--- a/index.html
+++ b/index.html
@@ -4,5 +4,15 @@ layout: home
 
 Welcome to my portfolio!
 
+<nav>
+  <ul>
+    <li><a href="#">About Me</a></li>
+    <li><a href="#">Academic Projects</a></li>
+    <li><a href="#">Extracurricular</a></li>
+    <li><a href="resume.md">Resume</a></li>
+    <li><a href="#">Social Media</a></li>
+  </ul>
+</nav>
+
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
