--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: home 
 ---
-
-Welcome to my portfolio!
-
-<nav>
+<body>
+  <header>
+    <nav>
   <ul>
+    <li><a href="index.html">Home</a></li>
     <li><a href="#">About Me</a></li>
     <li><a href="#">Academic Projects</a></li>
     <li><a href="#">Extracurricular</a></li>
@@ -13,6 +13,9 @@ Welcome to my portfolio!
     <li><a href="#">Social Media</a></li>
   </ul>
 </nav>
+  <h1>Home page, Welcome to my portfolio!</h1>
+  </header>
+</body>
 
-<h1>Hello World</h1>
+<p>Hello World</p>
 <p>I'm hosted with GitHub Pages.</p>
