--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 ---
-layout: home 
----
+layout: home
+--- 
+
 <body>
-  <header>
-    <nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="#">About Me</a></li>
-    <li><a href="#">Academic Projects</a></li>
-    <li><a href="#">Extracurricular</a></li>
-    <li><a href="resume.md">Resume</a></li>
-    <li><a href="#">Social Media</a></li>
-  </ul>
-</nav>
-  <h1>Home page, Welcome to my portfolio!</h1>
-  </header>
-</body>
+    <header>
+      <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="projects.html">Academic Projects</a></li>
+      <li><a href="extra.html">Extracurricular</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="social.html">Social Media</a></li>
+    </ul>
+  </nav>
+    <h1>Home</h1>
+    </header>
+  </body>
+
+<p>Homepage</p>
 
 <p>Hello World</p>
 <p>I'm hosted with GitHub Pages.</p>
