--- a/index.html
+++ b/index.html
@@ -1,7 +1,43 @@
 ---
 layout: home
 --- 
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Website</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+    header {
+      background-color: #333; /* Change this to your desired background color */
+      color: #fff; /* Change this to your desired text color */
+      padding: 10px 0;
+    }
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+    nav ul li:last-child {
+      margin-right: 0;
+    }
+    nav ul li a {
+      color: #fff; /* Change this to your desired link color */
+      text-decoration: none;
+    }
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
 <body>
     <header>
       <nav>
@@ -22,3 +58,5 @@ layout: home
 
 <p>Hello World</p>
 <p>I'm hosted with GitHub Pages.</p>
+
+</html>
