--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: home
 --- 
+
     <head>
       <nav>
     <ul>
@@ -12,12 +13,13 @@ layout: home
       <li><a href="social.html">Social Media</a></li>
     </ul>
   </nav>
-    <h1>Home</h1>
+    <h1>Homepage</h1>
     </head>
 
 <body>
-<p>Homepage</p>
+<p><img src="professional_photo.jpg" alt="Me"></p>
 
-<p>Hello World</p>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Hello! Welcome to my digital portfolio!</p>
+<p>In the tabs above, you'll find various elements about my life that highlight my time at the University of Colorado Boulder,
+   as well as other aspects about my life.</p>
 </body>
