--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: home
 <body>
 <p><img src="professional_photo.jpg" alt="Me"></p>
 
-<p>Hello! Welcome to my digital portfolio!</p>
-<p>In the tabs above, you'll find various elements about my life that highlight my time at the University of Colorado Boulder,
-   as well as other aspects about my life.</p>
+<h6>Hello! Welcome to my digital portfolio!</h6>
+<h6>In the tabs above, you'll find various elements about my life that highlight my time at the University of Colorado Boulder,
+   as well as other aspects about my life.</h6>
 </body>
