--- a/projects.html
+++ b/projects.html
@@ -14,8 +14,65 @@ layout: home
       <li><a href="social.html">Social Media</a></li>
     </ul>
   </nav>
-    <h1>Projects</h1>
+    <h1>My Projects</h1>
     </header>
   </body>
 
-<p>Project stuff</p>
+<div>
+  <h3>Mancala Simulation</h3>
+  <ul>
+    <li>Class: Introduction to AI</li>
+  </ul>
+  <p>
+    For this project, I worked alone to simulate the game Mancala using Python. The specifics of
+this project included creating an AI player that uses the algorithm Minimax to pick the best
+available option for gameplay. The other player picked a random option during their turn. We
+also explored the use of alpha-beta pruning to optimize the minimax function. Then, simulations
+were run to test the win/loss ratio between the two players, as I increased the depth of the
+minimax function.
+  </p>
+</div>
+
+<div>
+  <h3>Adventure game</h3>
+  <ul>
+    <li>Class: Object Oriented Analysis and Design</li>
+  </ul>
+  <p>
+    This was a semester-long project that was updated every few weeks to include different
+    elements. I worked with a partner throughout the entire project. Written in Java, we used a
+    variety of different OO Design Priciples. The game was set up to include multiple players that
+    had different ways they moved through the game or floor plan, and a variety of tests to
+    determine end of game scenarios. Game simulations were ran and a report printed.     
+  </p>
+</div>
+
+<div>
+  <h3>Stratego Simulation</h3>
+  <ul>
+    <li>Class: Object Oriented Analysis and Design
+    </li>
+  </ul>
+  <p>
+    I worked with a partner for this project. We had creative freedom for what we wanted this project
+to entail and decided to create a simulation of the game Stratego. Again, this was written in
+Java and we had to utilize a variety of OO Design Principles. For this game, we recreated the
+gameplay and the different ways pieces were able to move. We then visualized the game board
+and created a user interface for gameplay.
+  </p>
+</div>
+
+<div>
+  <h3>Graphing the Healthcare Suppply Chain</h3>
+  <ul>
+    <li>Class: Software Engineering Project</li>
+  </ul>
+  <p>
+    For this project, I am working with five
+other people to graph the healthcare supply chain for the company GHX. We are ingesting huge
+data files with product/supplier information into a knowledge graph, applying AI techniques to
+suggest new or updated connections within the graph, and visualizing the data and query scripts
+using Neo4J. We have scripts written in Cypher, as well as Python and Gremlin code for the
+main software.
+  </p>
+</div>
