--- a/extra.html
+++ b/extra.html
@@ -14,7 +14,7 @@ layout: home
       <li><a href="social.html">Social Media</a></li>
     </ul>
   </nav>
-    <h1>Extracurricular</h1>
+    <h1 style="text-align:center;">Extracurricular</h1>
     </header>
   </body>
 
