--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ layout: home
       <li><a href="social.html">Social Media</a></li>
     </ul>
   </nav>
-    <h1>Homepage</h1>
+    <h1 style="text-align:center;">Homepage</h1>
     </head>
 
 <body>
 <p><img src="professional_photo.jpg" alt="Me"></p>
 
-<h6>Hello! Welcome to my digital portfolio!</h6>
-<h6>In the tabs above, you'll find various elements about my life that highlight my time at the University of Colorado Boulder,
-   as well as other aspects about my life.</h6>
+<h4>Hello! Welcome to my digital portfolio!</h4>
+<h4>In the tabs above, you'll find various elements about my life that highlight my time at the University of Colorado Boulder,
+   as well as other aspects about my life.</h4>
 </body>
