--- a/social.html
+++ b/social.html
@@ -15,7 +15,7 @@ layout: home
     </ul>
   </nav>
 
-    <h1>Social</h1>
+    <h1 style="text-align:center;">Social</h1>
     </header>
   </body>
 
