--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ layout: home
       <li><a href="social.html">Social Media</a></li>
     </ul>
   </nav>
-    <h1>About Me</h1>
+    <h1 style="text-align:center;">About Me</h1>
     </header>
   </body>
 
