--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@ layout: home
       <li><a href="social.html">Social Media</a></li>
     </ul>
   </nav>
-    <h1>Resume</h1>
+    <h1 style="text-align:center;">Resume</h1>
     </header>
   </body>
 
