--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@ layout: home
     <h1 style="text-align:center;">About Me</h1>
     </header>
   </body>
-<body style="background-color:rgb(216, 216, 216);">
-<p style="text-align:center;">Hello, my name is Victoria Bockman and I am a senior at the University of Colorado Boulder majoring in Computer Science and graduating in May of 2024. I have a passion for software development and the field of cybersecurity. 
+<p style="text-align:center;background-color:rgb(216, 216, 216);">Hello, my name is Victoria Bockman and I am a senior at the University of Colorado Boulder majoring in Computer Science and graduating in May of 2024. I have a passion for software development and the field of cybersecurity. 
 
   Throughout my years in school, I have honed my skills in various software development languages, mastering both theoretical concepts and practical applications. Through hands-on projects, I've gained experience in building scalable applications and websites, debugging intricate code, and collaborating with my peers.
   
@@ -27,5 +26,3 @@ layout: home
   I’ve been working with a great team at a local distillery for the past three years, creating invaluable connections within my local community and leveraging my creativity to enhance the brand. Outside of school, I am a true Colorado native at heart. I’ve been snowboarding and hiking for as long as I can remember, and I take every moment I can to enjoy what this area offers.
   
   As I prepare to embark on the next chapter of my journey, I am eager to use my diverse skill set and hands-on experiences to secure an internship opportunity where I can collaborate with like-minded individuals on meaningful projects. I am driven by a curiosity and a commitment to making a positive impact in the tech industry, and I am excited about the possibilities that lie ahead.</p>
-
-</body>
