--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: home
 --- 
 
     <head>
+      <link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
+      <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="styles.css">
       <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
