--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@ layout: home
 
 <body>
     <header>
+      <link rel="stylesheet" href="style.css">
       <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
