--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@ layout: home
 
     <head>
       <link rel="stylesheet" href="style.css">
+      <style>
+        ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+        }
+        
+        li {
+          display: inline;
+        }
+        </style>
       <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
