--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: home
         </style>
       <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" style="text-decoration:none;">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="projects.html">Academic Projects</a></li>
       <li><a href="extra.html">Extracurricular</a></li>
