--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ layout: home
       <nav>
     <ul>
       <li><a href="index.html" style="text-decoration:none;">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="projects.html">Academic Projects</a></li>
-      <li><a href="extra.html">Extracurricular</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="social.html">Social Media</a></li>
+      <li><a href="about.html" style="text-decoration:none;">About Me</a></li>
+      <li><a href="projects.html" style="text-decoration:none;">Academic Projects</a></li>
+      <li><a href="extra.html" style="text-decoration:none;">Extracurricular</a></li>
+      <li><a href="resume.html" style="text-decoration:none;">Resume</a></li>
+      <li><a href="social.html" style="text-decoration:none;">Social Media</a></li>
     </ul>
   </nav>
     <h1 style="text-align:center;">Homepage</h1>
