--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ layout: home
       list-style-type: none;
       margin: 0;
       padding: 0;
+      display: flex; /* Use flexbox layout */
+      justify-content: space-around; /* Space out items evenly */
     }
     
     li {
