--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home
     ul {
       list-style-type: none;
       margin: 0;
-      padding: 0;
+      padding: 50px;
     }
     
     li {
