--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: home
   <style>
     ul {
       list-style-type: none;
-      margin: 0;
-      padding: 50px;
+      margin: 50px;
+      padding: 0;
     }
     
     li {
