--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: home
 --- 
 
     <head>
+      <div style="background-color: blue;">
       <link rel="stylesheet" href="style.css">
       <style>
         ul {
@@ -26,6 +27,7 @@ layout: home
     </ul>
   </nav>
     <h1 style="text-align:center;">Homepage</h1>
+  </div>
     </head>
 
 <body>
