--- a/index.html
+++ b/index.html
@@ -5,15 +5,32 @@ layout: home
     <head>
       <link rel="stylesheet" href="style.css">
       <style>
-        ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-        }
         
-        li {
-          display: inline;
-        }
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      li {
+        float: left;
+        width: 16.66%;
+      }
+
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover {
+        background-color: #111;
+      }
+        
         </style>
       <nav>
     <ul>
