--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ layout: home
       <link rel="stylesheet" href="style.css">
       <style>
         
-      ul {
+      ul { 
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #333;
+        background-color: #333; 
       }
 
       li {
@@ -36,10 +36,10 @@ layout: home
     <ul>
       <li><a href="index.html" style="text-decoration:none;">Home</a></li>
       <li><a href="about.html" style="text-decoration:none;">About Me</a></li>
-      <li><a href="projects.html" style="text-decoration:none;">Academic Projects</a></li>
+      <li><a href="projects.html" style="text-decoration:none;">Projects</a></li>
       <li><a href="extra.html" style="text-decoration:none;">Extracurricular</a></li>
       <li><a href="resume.html" style="text-decoration:none;">Resume</a></li>
-      <li><a href="social.html" style="text-decoration:none;">Social Media</a></li>
+      <li><a href="social.html" style="text-decoration:none;">Social</a></li>
     </ul>
   </nav>
     <h1 style="text-align:center;">Homepage</h1>
