--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #333; 
+        background-color: #ffffff; 
       }
 
       li {
@@ -21,14 +21,14 @@ layout: home
 
       li a {
         display: block;
-        color: white;
+        color: rgb(0, 0, 0);
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
       }
 
       li a:hover {
-        background-color: #111;
+        background-color: #5f5f5f;
       }
         
         </style>
