--- a/about.html
+++ b/about.html
@@ -2,22 +2,49 @@
 layout: home
 --- 
 
-<body>
-    <header>
-      <link rel="stylesheet" href="style.css">
-      <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="projects.html">Academic Projects</a></li>
-      <li><a href="extra.html">Extracurricular</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="social.html">Social Media</a></li>
-    </ul>
-  </nav>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <style>
+      
+    ul { 
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #ffffff; 
+    }
+
+    li {
+      float: left;
+      width: 16.66%;
+    }
+
+    li a {
+      display: block;
+      color: rgb(0, 0, 0);
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
+    li a:hover {
+      background-color: #5f5f5f;
+    }
+      
+      </style>
+    <nav>
+  <ul>
+    <li><a href="index.html" style="text-decoration:none;">Home</a></li>
+    <li><a href="about.html" style="text-decoration:none;">About Me</a></li>
+    <li><a href="projects.html" style="text-decoration:none;">Projects</a></li>
+    <li><a href="extra.html" style="text-decoration:none;">Extracurricular</a></li>
+    <li><a href="resume.html" style="text-decoration:none;">Resume</a></li>
+    <li><a href="social.html" style="text-decoration:none;">Social</a></li>
+  </ul>
+</nav>
     <h1 style="text-align:center;">About Me</h1>
-    </header>
-  </body>
+    </head>
+  <body>
 <p style="text-align:center;background-color:rgb(250, 250, 250);">Hello, my name is Victoria Bockman and I am a senior at the University of Colorado Boulder majoring in Computer Science and graduating in May of 2024. I have a passion for software development and the field of cybersecurity. 
 
   Throughout my years in school, I have honed my skills in various software development languages, mastering both theoretical concepts and practical applications. Through hands-on projects, I've gained experience in building scalable applications and websites, debugging intricate code, and collaborating with my peers.
@@ -27,3 +54,4 @@ layout: home
   I’ve been working with a great team at a local distillery for the past three years, creating invaluable connections within my local community and leveraging my creativity to enhance the brand. Outside of school, I am a true Colorado native at heart. I’ve been snowboarding and hiking for as long as I can remember, and I take every moment I can to enjoy what this area offers.
   
   As I prepare to embark on the next chapter of my journey, I am eager to use my diverse skill set and hands-on experiences to secure an internship opportunity where I can collaborate with like-minded individuals on meaningful projects. I am driven by a curiosity and a commitment to making a positive impact in the tech industry, and I am excited about the possibilities that lie ahead.</p>
+  </body>
