--- a/extra.html
+++ b/extra.html
@@ -45,5 +45,20 @@ layout: home
 <h1 style="text-align:center;">Extracurricular</h1>
     </head>
 <body>
-  <p>Extracurricular stuff</p>
+  <div>
+    <h3>Snowboarding</h3>
+  </div>
+
+  <div>
+    <h3>Concerts</h3>
+  </div>
+
+  <div>
+    <h3>Hiking</h3>
+  </div>
+
+  <div>
+    <h3>Traveling</h3>
+  </div>
+
   </body>
