--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@ layout: home
   }
 
   li {
-    
+    float: left;
     width: 16.66%;
   }
 
@@ -47,9 +47,7 @@ layout: home
 
 <div>
   <h3>Mancala Simulation</h3>
-  <ul>
-    <li>Class: Introduction to AI</li>
-  </ul>
+    <h4>Class: Introduction to AI</h4>
   <p>
     For this project, I worked alone to simulate the game Mancala using Python. The specifics of
 this project included creating an AI player that uses the algorithm Minimax to pick the best
