--- a/extra.html
+++ b/extra.html
@@ -47,14 +47,19 @@ layout: home
 <body>
   <div>
     <h3>Snowboarding</h3>
+    <p>Born and raised in Colorado, I've been on the mountain since I was 4 years old. From skiing to snowboarding, sledding to snowshoeing,
+      I've always embraced the opportunities on the mountain and found ways to have fun in some of the worst types of weather.
+    </p>
   </div>
 
   <div>
     <h3>Concerts</h3>
+    <p>With Red Rocks just around the corner from Boulder, it's hard to not </p>
   </div>
 
   <div>
-    <h3>Hiking</h3>
+    <h3>Hiking / Camping</h3>
+    <p></p>
   </div>
 
   <div>
