--- a/projects.html
+++ b/projects.html
@@ -60,9 +60,7 @@ minimax function.
 
 <div>
   <h3>Adventure game</h3>
-  <ul>
-    <li>Class: Object Oriented Analysis and Design</li>
-  </ul>
+    <h4>Class: Object Oriented Analysis and Design</h4>
   <p>
     This was a semester-long project that was updated every few weeks to include different
     elements. I worked with a partner throughout the entire project. Written in Java, we used a
@@ -74,10 +72,8 @@ minimax function.
 
 <div>
   <h3>Stratego Simulation</h3>
-  <ul>
-    <li>Class: Object Oriented Analysis and Design
-    </li>
-  </ul>
+    <h4>Class: Object Oriented Analysis and Design</h4>
+    <a href="https://github.com/CSCI-4448-5448-OOAD/final-project-victoriabockman-vernonwalker">Link to project</a>
   <p>
     I worked with a partner for this project. We had creative freedom for what we wanted this project
 to entail and decided to create a simulation of the game Stratego. Again, this was written in
@@ -89,9 +85,7 @@ and created a user interface for gameplay.
 
 <div>
   <h3>Graphing the Healthcare Suppply Chain</h3>
-  <ul>
-    <li>Class: Software Engineering Project</li>
-  </ul>
+    <h4>Class: Software Engineering Project</h4>
   <p>
     For this project, I am working with five
 other people to graph the healthcare supply chain for the company GHX. We are ingesting huge
