--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,7 @@ available option for gameplay. The other player picked a random option during th
 also explored the use of alpha-beta pruning to optimize the minimax function. Then, simulations
 were run to test the win/loss ratio between the two players, as I increased the depth of the
 minimax function.
+<p> INCLUDE PICTURE OF RAN SIMULATION</p>
   </p>
 </div>
 
@@ -68,12 +69,12 @@ minimax function.
     had different ways they moved through the game or floor plan, and a variety of tests to
     determine end of game scenarios. Game simulations were ran and a report printed.     
   </p>
+  <a href="https://github.com/CSCI-4448-5448-OOAD/project-4-arcane-victoriabockman-vernonwalker">Link to repo</a>
 </div>
 
 <div>
   <h3>Stratego Simulation</h3>
     <h4>Class: Object Oriented Analysis and Design</h4>
-    <a href="https://github.com/CSCI-4448-5448-OOAD/final-project-victoriabockman-vernonwalker">Link to project</a>
   <p>
     I worked with a partner for this project. We had creative freedom for what we wanted this project
 to entail and decided to create a simulation of the game Stratego. Again, this was written in
@@ -81,6 +82,7 @@ Java and we had to utilize a variety of OO Design Principles. For this game, we 
 gameplay and the different ways pieces were able to move. We then visualized the game board
 and created a user interface for gameplay.
   </p>
+  <a href="https://github.com/CSCI-4448-5448-OOAD/final-project-victoriabockman-vernonwalker">Link to repo</a>
 </div>
 
 <div>
@@ -94,6 +96,7 @@ suggest new or updated connections within the graph, and visualizing the data an
 using Neo4J. We have scripts written in Cypher, as well as Python and Gremlin code for the
 main software.
   </p>
+<p> INCLUDE PICTURE OF POSTER!!</p>
 </div>
 
 </body>
