--- a/extra.html
+++ b/extra.html
@@ -50,20 +50,23 @@ layout: home
     <p>Born and raised in Colorado, I've been on the mountain since I was 4 years old. From skiing to snowboarding, sledding to snowshoeing,
       I've always embraced the opportunities on the mountain and found ways to have fun in some of the worst types of weather.
     </p>
+    <p>PICTURE OF ME SNOWBOARDING</p>
   </div>
 
   <div>
     <h3>Concerts</h3>
     <p>With Red Rocks just around the corner from Boulder, it's hard to not </p>
+    <p>CONCERT PICTURE</p>
   </div>
 
   <div>
     <h3>Hiking / Camping</h3>
-    <p></p>
+    <p>ATV PICTURE? OR CAMPING</p>
   </div>
 
   <div>
     <h3>Traveling</h3>
+    <p>MEXICO PICTURE</p>
   </div>
 
   </body>
