--- a/resume.html
+++ b/resume.html
@@ -46,4 +46,10 @@ layout: home
     </head>
 <body>
   <p>Resume stuff</p>
+  <object class="pdf" 
+            data=
+"VictoriaBockmanResume_March2024.pdf"
+            width="800"
+            height="500">
+    </object>
   </body>
