--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,8 @@ layout: home
 <h1 style="text-align:center;">Resume</h1>
     </head>
 <body>
-  <p>Resume stuff</p>
+  <p>Below is an embedded PDF of my resume, feel free to download it and look it over at your leisure!
+  </p>
   <object class="pdf" 
             data=
 "VictoriaBockmanResume_March2024.pdf"
