--- a/social.html
+++ b/social.html
@@ -45,5 +45,20 @@ layout: home
 <h1 style="text-align:center;">Social</h1>
     </head>
 <body>
-  <p>Social stuff</p>
+  <div>
+    <h3>Twitter</h3>
+    <p></p>
+  </div>
+  <div>
+    <h3>LinkedIn</h3>
+    <p></p>
+  </div>
+  <div>
+    <h3>Github</h3>
+    <p></p>
+  </div>
+  <div>
+    <h3>Instagram?</h3>
+    <p></p>
+  </div>
   </body>
