--- a/projects.html
+++ b/projects.html
@@ -55,8 +55,8 @@ available option for gameplay. The other player picked a random option during th
 also explored the use of alpha-beta pruning to optimize the minimax function. Then, simulations
 were run to test the win/loss ratio between the two players, as I increased the depth of the
 minimax function.
-<p> INCLUDE PICTURE OF RAN SIMULATION</p>
   </p>
+<a href="https://github.com/victoriabockman/mancala">Link to repo</a>
 </div>
 
 <div>
