--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@ also explored the use of alpha-beta pruning to optimize the minimax function. Th
 were run to test the win/loss ratio between the two players, as I increased the depth of the
 minimax function.
   </p>
-<a href="https://github.com/victoriabockman/mancala">Link to repo</a>
+<a href="https://github.com/victoriabockman/mancala" style="color: rgb(40, 122, 255);">Link to repo</a>
 </div>
 
 <div>
@@ -69,7 +69,7 @@ minimax function.
     had different ways they moved through the game or floor plan, and a variety of tests to
     determine end of game scenarios. Game simulations were ran and a report printed.     
   </p>
-  <a href="https://github.com/CSCI-4448-5448-OOAD/project-4-arcane-victoriabockman-vernonwalker">Link to repo</a>
+  <a href="https://github.com/CSCI-4448-5448-OOAD/project-4-arcane-victoriabockman-vernonwalker" style="color: rgb(40, 122, 255);">Link to repo</a>
 </div>
 
 <div>
@@ -82,7 +82,7 @@ Java and we had to utilize a variety of OO Design Principles. For this game, we 
 gameplay and the different ways pieces were able to move. We then visualized the game board
 and created a user interface for gameplay.
   </p>
-  <a href="https://github.com/CSCI-4448-5448-OOAD/final-project-victoriabockman-vernonwalker">Link to repo</a>
+  <a href="https://github.com/CSCI-4448-5448-OOAD/final-project-victoriabockman-vernonwalker" style="color: rgb(40, 122, 255);">Link to repo</a>
 </div>
 
 <div>
@@ -96,7 +96,7 @@ suggest new or updated connections within the graph, and visualizing the data an
 using Neo4J. We have scripts written in Cypher, as well as Python and Gremlin code for the
 main software.
   </p>
-<p> INCLUDE PICTURE OF POSTER!!</p>
+  <p><img src="poster.jpg" alt="Expo poster"></p>
 </div>
 
 </body>
