--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ layout: home
     </head>
 
 <body>
+  <h4 style="text-align:center">Hello! Welcome to my digital portfolio!</h4>
+<h4 style="text-align:center">In the tabs above, you'll find various elements about my life that highlight my time at the University of Colorado Boulder,
+   as well as other aspects about my life.</h4>
 <p><img src="professional_photo.jpg" alt="Me"></p>
 
-<h4>Hello! Welcome to my digital portfolio!</h4>
-<h4>In the tabs above, you'll find various elements about my life that highlight my time at the University of Colorado Boulder,
-   as well as other aspects about my life.</h4>
 </body>
