--- a/social.html
+++ b/social.html
@@ -47,18 +47,15 @@ layout: home
 <body>
   <div>
     <h3>Twitter</h3>
-    <p></p>
+    <a href="https://twitter.com/victoriabockman" style="color: rgb(40, 122, 255);">https://twitter.com/victoriabockman</a>
   </div>
   <div>
     <h3>LinkedIn</h3>
-    <p></p>
+    <a href="https://www.linkedin.com/in/victoria-bockman-5212832b1/" style="color: rgb(40, 122, 255);">https://www.linkedin.com/in/victoria-bockman/</a>
   </div>
   <div>
     <h3>Github</h3>
-    <p></p>
+    <a href="https://github.com/victoriabockman" style="color: rgb(40, 122, 255);">https://github.com/victoriabockman</a>
   </div>
-  <div>
-    <h3>Instagram?</h3>
-    <p></p>
-  </div>
+
   </body>
