--- a/about.html
+++ b/about.html
@@ -54,4 +54,6 @@ layout: home
   I’ve been working with a great team at a local distillery for the past three years, creating invaluable connections within my local community and leveraging my creativity to enhance the brand. Outside of school, I am a true Colorado native at heart. I’ve been snowboarding and hiking for as long as I can remember, and I take every moment I can to enjoy what this area offers.
   
   As I prepare to embark on the next chapter of my journey, I am eager to use my diverse skill set and hands-on experiences to secure an internship opportunity where I can collaborate with like-minded individuals on meaningful projects. I am driven by a curiosity and a commitment to making a positive impact in the tech industry, and I am excited about the possibilities that lie ahead.</p>
-  </body>
+  <p><img src="another.jpg"></p>
+</body>
+
