--- a/extra.html
+++ b/extra.html
@@ -65,7 +65,7 @@ layout: home
   <div>
     <h3>Hiking / Camping</h3>
     <p>In the warmer months you may catch me back on the mountain for some fun in the sun! The local trails offer a peace of mind from the inner cities and 
-      a way to enjoy the beauty on the land. Some of my favorite trails include Horsetooth mountain and Horsetooth falls, as well as some others in 
+      a way to enjoy the beauty of the land. Some of my favorite trails include Horsetooth mountain and Horsetooth falls, as well as some others in 
       Boulder county. 
     </p>
     <p><img src="hiking.jpg"></p>
@@ -74,8 +74,8 @@ layout: home
   <div>
     <h3>Traveling</h3>
     <p>I also love to travel, as most people do. I haven't been outside of the country very many times, but that is sure to change soon as I am about 
-      to graduate. Of the places I have been within the United States and outside, my favorite places I've seen have been the ruins in Tulum, Mexico, the 
-      bustling city of New Orleans, Louisiana, and the quaint area of Mackinac Island, Michigan.
+      to graduate. Of the places I have been within the United States and outside, my favorite places have been the ruins in Tulum, Mexico, the 
+      bustling city of New Orleans, Louisiana, and the quaint area of Mackinac Island, Michigan (pictured below).
     </p>
     <p><img src="travel.jpg"></p>
   </div>
