--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@ layout: home
   <h4 style="text-align:center">Hello! Welcome to my digital portfolio!</h4>
 <h4 style="text-align:center">In the tabs above, you'll find various elements about my life that highlight my time at the University of Colorado Boulder,
    as well as other aspects about my life.</h4>
-<p><img src="professional_photo.jpg" alt="Me"></p>
+<p><img src="professional_photo.jpg" alt="Me" width="200"></p>
 
 </body>
