--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: home
       <li><a href="about.html" style="text-decoration:none;">About Me</a></li>
       <li><a href="projects.html" style="text-decoration:none;">Projects</a></li>
       <li><a href="extra.html" style="text-decoration:none;">Extracurricular</a></li>
-      <!-- <li><a href="resume.html" style="text-decoration:none;">Resume</a></li> -->
+      <li><a href="resume.html" style="text-decoration:none;">Resume</a></li>
       <li><a href="social.html" style="text-decoration:none;">Social</a></li>
     </ul>
   </nav>
