--- a/resume.html
+++ b/resume.html
@@ -48,8 +48,7 @@ layout: home
   <p>Below is an embedded PDF of my resume, feel free to download it and look it over at your leisure!
   </p>
   <object class="pdf" 
-            data=
-"VictoriaBockman_Resume_Sep_16.pdf"
+            data="VictoriaBockman_Resume_Sep_16.pdf"
             width="800"
             height="500">
     </object>
